# ChatDocs

./: .gitignore  README.md  main.py  pyproject.toml
src/: fetch_data.py  get_data.py  indexer.py
